--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
-
 body {
   font-family: "Poppins", sans-serif;
-  padding: 20px;
+  padding: 95px;
   background: linear-gradient(125deg, #fc3f5f 0%, #7d61ff 100.32%);
   background-repeat: no-repeat;
   display: flex;
@@ -12,7 +11,7 @@ body {
 .container {
   max-width: 1410px;
   width: 100%;
-  height: 1010px;
+
   border-radius: 32px;
   background: linear-gradient(
     180deg,
@@ -37,16 +36,19 @@ body {
   width: 100%;
 }
 
+.nav__logo img {
+  width: 38px;
+  max-width: 38px;
+  height: 47px;
+}
+
 .nav__ul {
   display: flex;
   flex-direction: row;
   gap: 64px;
-
-  justify-content: center;
-  align-items: center;
 }
 
-.nav__li {
+.nav__a {
   color: #a0a3a7;
   font-size: 14px;
   font-weight: 300;
