--- a/fonts.css
+++ b/fonts.css
@@ -24,7 +24,7 @@
 
 @font-face {
   font-family: "Poppins";
-  src: url("Poppins-Light.woff2") format("woff2");
+  src: url("fonts/Poppins-Light.woff2") format("woff2");
   font-weight: 300;
   font-style: normal;
   font-display: swap;
