--- a/style.css
+++ b/style.css
@@ -2,22 +2,39 @@ html {
   display: flex;
   justify-content: center;
 }
+
 body {
   max-width: 1600px;
   width: 100%;
+  max-height: 1200px;
+  height: 100%;
   font-family: "Poppins", sans-serif;
+  background: linear-gradient(
+    180deg,
+    rgba(43, 34, 21, 0.8) -1.22%,
+    #22282e 101.33%
+  );
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.wrapper {
+  max-width: 1600px;
+  width: 100%;
+  min-height: 100%;
   padding: 95px;
   background: linear-gradient(125deg, #fc3f5f 0%, #7d61ff 100.32%);
   background-repeat: no-repeat;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 /* container */
 .container {
   max-width: 1410px;
   width: 100%;
-
   border-radius: 32px;
   background: linear-gradient(
     180deg,
@@ -26,6 +43,7 @@ body {
   );
   box-shadow: 0px 0px 250px 0px rgba(0, 0, 0, 0.3);
   padding: 32px;
+  flex-shrink: 0;
 }
 
 /* nav */
@@ -118,4 +136,5 @@ body {
   justify-content: center;
   align-items: center;
   gap: 32px;
+  margin-bottom: 129px;
 }
