--- a/style.css
+++ b/style.css
@@ -9,11 +9,7 @@ body {
   max-height: 1200px;
   height: 100%;
   font-family: "Poppins", sans-serif;
-  background: linear-gradient(
-    180deg,
-    rgba(43, 34, 21, 0.8) -1.22%,
-    #22282e 101.33%
-  );
+  background: #373737;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -43,7 +39,7 @@ body {
   );
   box-shadow: 0px 0px 250px 0px rgba(0, 0, 0, 0.3);
   padding: 32px;
-  flex-shrink: 0;
+  /* flex-shrink: 0; */
 }
 
 /* nav */
