--- a/style.css
+++ b/style.css
@@ -19,7 +19,8 @@ body {
   max-width: 1600px;
   width: 100%;
   min-height: 100%;
-  padding: 95px;
+  /* padding: 95px; */
+  padding: 5.938vw;
   background: linear-gradient(125deg, #fc3f5f 0%, #7d61ff 100.32%);
   background-repeat: no-repeat;
   display: flex;
@@ -133,4 +134,10 @@ body {
   align-items: center;
   gap: 32px;
   margin-bottom: 129px;
+}
+
+@media screen and (min-width: 1600px) {
+  .wrapper {
+    padding: 95px;
+  }
 }
