--- a/style.css
+++ b/style.css
@@ -19,8 +19,7 @@ body {
   max-width: 1600px;
   width: 100%;
   min-height: 100%;
-  /* padding: 95px; */
-  padding: 5.938vw;
+  padding: 95px;
   background: linear-gradient(125deg, #fc3f5f 0%, #7d61ff 100.32%);
   background-repeat: no-repeat;
   display: flex;
@@ -40,7 +39,6 @@ body {
   );
   box-shadow: 0px 0px 250px 0px rgba(0, 0, 0, 0.3);
   padding: 32px;
-  /* flex-shrink: 0; */
 }
 
 /* nav */
@@ -136,8 +134,31 @@ body {
   margin-bottom: 129px;
 }
 
-@media screen and (min-width: 1600px) {
+/* X-Small	Нет	<576px */
+@media screen and (max-width: 576px) {
   .wrapper {
-    padding: 95px;
+    padding: 35px;
   }
 }
+
+/* Small	Small	sm	≥576px */
+@media screen and (min-width: 577px) {
+  .wrapper {
+    padding: 50px;
+  }
+}
+
+/* Medium	Medium	md	≥768px */
+@media screen and (min-width: 768px) {
+  .wrapper {
+    padding: 65px;
+  }
+}
+
+/* Large	Large	lg	≥992px */
+@media screen and (min-width: 992px) {
+  .wrapper {
+    padding: 80px;
+  }
+}
+
