--- a/style.css
+++ b/style.css
@@ -272,7 +272,7 @@ body {
     padding: 60px;
     background: #5e5d5d;
     transform: translateX(-110%);
-    transition: 0.2s transform ease-in-out;
+    transition: 0.2s all ease-in-out;
     color: white;
     font-size: 18px;
   }
